# alive2

./: CMakeLists.txt
cmake/: aliveConfig.cmake
